--- a/GATEWAY/tests/units.html
+++ b/GATEWAY/tests/units.html
@@ -13,15 +13,15 @@
         <td colspan="3" title="Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.133 Safari/537.36">Browser: Chrome 57.0.2987 (Windows 10 0.0.0)</td>
       </tr>
       <tr class="overview">
-        <td colspan="3">Timestamp: 2017-05-09 12:03:01</td>
+        <td colspan="3">Timestamp: 2017-05-10 18:55:27</td>
       </tr>
       <tr>
         <td colspan="3">
-          76 tests / 
+          83 tests / 
           0 errors / 
           0 failures / 
           0 skipped / 
-          runtime: 1.701s
+          runtime: 3.965s
         </td>
       </tr>
       <tr class="header">
@@ -30,22 +30,57 @@
         <td>Suite / Results</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.638s</td>
+        <td>Passed in 0.7s</td>
         <td>is created</td>
         <td>App Component</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.392s</td>
+        <td>Passed in 0.369s</td>
         <td>initialises with a root page of TabsPage</td>
         <td>App Component</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.018s</td>
+        <td>Passed in 0.327s</td>
+        <td>is created</td>
+        <td>applications</td>
+      </tr>
+      <tr class="pass">
+        <td>Passed in 0.299s</td>
+        <td>is created</td>
+        <td>dev-terminal</td>
+      </tr>
+      <tr class="pass">
+        <td>Passed in 0.407s</td>
+        <td>should add a new message to the messages list</td>
+        <td>dev-terminal &raquo; addNewMessage(message)</td>
+      </tr>
+      <tr class="pass">
+        <td>Passed in 0.268s</td>
+        <td>should clear messages from the terminal window</td>
+        <td>dev-terminal &raquo; clearTerminal(): void</td>
+      </tr>
+      <tr class="pass">
+        <td>Passed in 0.273s</td>
+        <td>is created</td>
+        <td>logIn</td>
+      </tr>
+      <tr class="pass">
+        <td>Passed in 0.268s</td>
+        <td>is created</td>
+        <td>physical-tiles</td>
+      </tr>
+      <tr class="pass">
+        <td>Passed in 0.278s</td>
+        <td>is created</td>
+        <td>virtual-tiles</td>
+      </tr>
+      <tr class="pass">
+        <td>Passed in 0.012s</td>
         <td>should create an instance of the BleService</td>
         <td>bleService</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.016s</td>
+        <td>Passed in 0.012s</td>
         <td>should scan for BLE devices, and start a scanner that scans for new BLE devices</td>
         <td>bleService &raquo; startBLEScanner(): void</td>
       </tr>
@@ -55,52 +90,52 @@
         <td>bleService &raquo; startBLEScanner(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.013s</td>
+        <td>Passed in 0.012s</td>
         <td>should unsubscribe bleScanner if defined</td>
         <td>bleService &raquo; stopBLEScanner(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.014s</td>
+        <td>Passed in 0.02s</td>
         <td>should check if BLE is enabled</td>
         <td>bleService &raquo; checkBleEnabled(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.016s</td>
+        <td>Passed in 0.018s</td>
         <td>should invoke the method scanBLE() if BLE is enabled</td>
         <td>bleService &raquo; checkBleEnabled(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.01s</td>
+        <td>Passed in 0.018s</td>
         <td>should try to enable BLE if method isEnabled throws an error</td>
         <td>bleService &raquo; checkBleEnabled(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.008s</td>
+        <td>Passed in 0.018s</td>
         <td>should invoke method scanBLE() if it successfully enables BLE</td>
         <td>bleService &raquo; checkBleEnabled(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.017s</td>
         <td>should present the error message if method enable() throws an error</td>
         <td>bleService &raquo; checkBleEnabled(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.021s</td>
         <td>should run method startDeviceNotification if ble.connect returns no error</td>
         <td>bleService &raquo; connect(device: Device): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.008s</td>
+        <td>Passed in 0.026s</td>
         <td>should run method devicesService.clearDisconnectedDevices if ble.connect returns an error</td>
         <td>bleService &raquo; connect(device: Device): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.007s</td>
         <td>should run the method sendData if ble.connect returns no error</td>
         <td>bleService &raquo; locate(device: Device): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.008s</td>
         <td>should not run the method sendData if ble.connect returns an error</td>
         <td>bleService &raquo; locate(device: Device): void</td>
       </tr>
@@ -110,7 +145,7 @@
         <td>bleService &raquo; disconnect(device: Device): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.02s</td>
+        <td>Passed in 0.008s</td>
         <td>should successfully send a dataString to a device using BLE</td>
         <td>bleService &raquo; sendData(device: Device, dataString: string): Promise<any></td>
       </tr>
@@ -120,17 +155,17 @@
         <td>bleService &raquo; scanBLE(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.008s</td>
+        <td>Passed in 0.011s</td>
         <td>should run the method utils.getEventStringAsObject and mqttClient.sendEvent if ble.startNotification returns no error and message is not null</td>
         <td>bleService &raquo; startDeviceNotification(device: Device): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.008s</td>
         <td>should run the method utils.getEventStringAsObject but not the method mqttClient.sendEvent if ble.startNotification returns no error, but message is null</td>
         <td>bleService &raquo; startDeviceNotification(device: Device): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.013s</td>
+        <td>Passed in 0.007s</td>
         <td>should not run  method utils.getEventStringAsObject and mqttClient.sendEvent if ble.startNotification returns an error</td>
         <td>bleService &raquo; startDeviceNotification(device: Device): void</td>
       </tr>
@@ -140,32 +175,32 @@
         <td>devicesService:</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.01s</td>
+        <td>Passed in 0.009s</td>
         <td>should convert a given BLE Device parameter to a Device</td>
         <td>devicesService: &raquo; convertBleDeviceToDevice(bleDevice: any): Promise<Device></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.011s</td>
+        <td>Passed in 0.014s</td>
         <td>should convert a given BLE Device parameter to a Device, but use bleDevice.name if an error is thrown</td>
         <td>devicesService: &raquo; convertBleDeviceToDevice(bleDevice: any): Promise<Device></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.006s</td>
+        <td>Passed in 0.014s</td>
         <td>should add a device to the devices-list if the list does not already contain the device parameter</td>
         <td>devicesService: &raquo; newDevice(device: Device)</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.008s</td>
+        <td>Passed in 0.021s</td>
         <td>should not add a device to the devices-list if the list already contains the device parameter</td>
         <td>devicesService: &raquo; newDevice(device: Device)</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.011s</td>
         <td>should change the name of the device parameter to the name parameter</td>
         <td>devicesService: &raquo; setCustomDeviceName(device: Device, name: String): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.006s</td>
+        <td>Passed in 0.007s</td>
         <td>should reset the name of the device parameter to the tileId</td>
         <td>devicesService: &raquo; resetDeviceName(device: Device): void</td>
       </tr>
@@ -175,7 +210,7 @@
         <td>devicesService: &raquo; clearDisconnectedDevices(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.012s</td>
+        <td>Passed in 0.009s</td>
         <td>should create an instance of the MqttClient</td>
         <td>mqttClient</td>
       </tr>
@@ -185,7 +220,7 @@
         <td>mqttClient &raquo; getDeviceSpecificTopic(deviceId: string, isEvent: boolean): string</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.012s</td>
         <td>should return a correct url adress for the specific device when no event is passed as an argument</td>
         <td>mqttClient &raquo; getDeviceSpecificTopic(deviceId: string, isEvent: boolean): string</td>
       </tr>
@@ -195,7 +230,7 @@
         <td>mqttClient &raquo; connect(user: string, host: string, port: number): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.011s</td>
+        <td>Passed in 0.008s</td>
         <td>should get connection data from tilesApi if it is undefined or null</td>
         <td>mqttClient &raquo; connect(user: string, host: string, port: number): void</td>
       </tr>
@@ -205,27 +240,27 @@
         <td>mqttClient &raquo; connect(user: string, host: string, port: number): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.008s</td>
         <td>should call client.on a total of 6 (six) times</td>
         <td>mqttClient &raquo; connect(user: string, host: string, port: number): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.008s</td>
         <td>should register a device at the server if client is defined</td>
         <td>mqttClient &raquo; registerDevice(device: Device): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.012s</td>
         <td>should unregister a device at the server if client is defined</td>
         <td>mqttClient &raquo; unregisterDevice(device: Device): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.006s</td>
+        <td>Passed in 0.008s</td>
         <td>should send an event if client is defined</td>
         <td>mqttClient &raquo; sendEvent(deviceId: string, event: CommandObject): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.008s</td>
         <td>should start the BackgroundFetch</td>
         <td>mqttClient &raquo; startBackgroundFetch(): void</td>
       </tr>
@@ -235,7 +270,7 @@
         <td>mqttClient &raquo; stopBackgroundFetch(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.008s</td>
+        <td>Passed in 0.009s</td>
         <td>should create an instance of the TilesApi</td>
         <td>tilesAPI</td>
       </tr>
@@ -245,42 +280,42 @@
         <td>tilesAPI &raquo; isTilesDevice(device: any): boolean</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.011s</td>
         <td>should return false when given a invalid device-input</td>
         <td>tilesAPI &raquo; isTilesDevice(device: any): boolean</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.006s</td>
+        <td>Passed in 0.007s</td>
         <td>should set the correct login data in the beforeEach</td>
         <td>tilesAPI &raquo; setLoginData(loginData: LoginData): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.01s</td>
+        <td>Passed in 0.007s</td>
         <td>should return the correct login data</td>
         <td>tilesAPI &raquo; getLoginData(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.012s</td>
+        <td>Passed in 0.007s</td>
         <td>should get loginData from storage if loginData is undefined</td>
         <td>tilesAPI &raquo; getLoginData(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.007s</td>
         <td>should get loginData from storage if loginData is null</td>
         <td>tilesAPI &raquo; getLoginData(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.012s</td>
+        <td>Passed in 0.007s</td>
         <td>should set the activeApp equal to the parameter</td>
         <td>tilesAPI &raquo; setActiveApp(activeApp: Application): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.006s</td>
         <td>should return the active app</td>
         <td>tilesAPI &raquo; getActiveApp(): Application</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.008s</td>
+        <td>Passed in 0.013s</td>
         <td>should return a mock application if activeApp is undefined</td>
         <td>tilesAPI &raquo; getActiveApp(): Application</td>
       </tr>
@@ -295,87 +330,87 @@
         <td>tilesAPI &raquo; getVirtualTiles(): VirtualTile[]</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.011s</td>
+        <td>Passed in 0.006s</td>
         <td>should clear the list of Virtual Tiles</td>
         <td>tilesAPI &raquo; clearVirtualTiles(): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.01s</td>
+        <td>Passed in 0.007s</td>
         <td>should return true if the userName is registered in the server</td>
         <td>tilesAPI &raquo; isTilesUser(userName: string, host: string): Promise<any></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.007s</td>
         <td>should return false if the userName is not registered in the server</td>
         <td>tilesAPI &raquo; isTilesUser(userName: string, host: string): Promise<any></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.021s</td>
         <td>should return false if there is an error</td>
         <td>tilesAPI &raquo; isTilesUser(userName: string, host: string): Promise<any></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.01s</td>
+        <td>Passed in 0.019s</td>
         <td>should return all available applications registered for all users</td>
         <td>tilesAPI &raquo; getAllApplications(): Promise<any></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.011s</td>
+        <td>Passed in 0.015s</td>
         <td>should catch if there is an error</td>
         <td>tilesAPI &raquo; getAllApplications(): Promise<any></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.012s</td>
+        <td>Passed in 0.01s</td>
         <td>should return an application named "test3"</td>
         <td>tilesAPI &raquo; getApplicationDetails(applicationId: string): Promise<any></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.008s</td>
+        <td>Passed in 0.009s</td>
         <td>should return null if there is an error</td>
         <td>tilesAPI &raquo; getApplicationDetails(applicationId: string): Promise<any></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.008s</td>
+        <td>Passed in 0.007s</td>
         <td>should return a list of three virtualTiles</td>
         <td>tilesAPI &raquo; getApplicationTiles(applicationId: string): Promise<any></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.017s</td>
         <td>should pair a device to a virtual tile and return status code 201</td>
         <td>tilesAPI &raquo; pairDeviceToVirtualTile(deviceId: string, virtualTileId: string, applicationId: string): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.01s</td>
+        <td>Passed in 0.016s</td>
         <td>should catch if there is an error</td>
         <td>tilesAPI &raquo; pairDeviceToVirtualTile(deviceId: string, virtualTileId: string, applicationId: string): void</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.012s</td>
         <td>should return true if the tile gets added to the database</td>
         <td>tilesAPI &raquo; addTileToDatabase(DeviceId: string): Promise<boolean></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.01s</td>
+        <td>Passed in 0.009s</td>
         <td>should return false if the method throws an error</td>
         <td>tilesAPI &raquo; addTileToDatabase(DeviceId: string): Promise<boolean></td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.011s</td>
+        <td>Passed in 0.009s</td>
         <td>should create an instance of the UtilsService</td>
         <td>utilsService</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.011s</td>
         <td>should convert the string parameter to an array og bytes</td>
         <td>utilsService &raquo; convertStringToBytes(str: String): any</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.008s</td>
         <td>should return null if the method is not able to convert the string</td>
         <td>utilsService &raquo; convertStringToBytes(str: String): any</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.015s</td>
         <td>should return an object conatining the eventName and the properties of the string parameter</td>
         <td>utilsService &raquo; getEventStringAsObject(eventString: string): CommandObject</td>
       </tr>
@@ -395,17 +430,17 @@
         <td>utilsService &raquo; verifyLoginCredentials(user: string, host: string, port: number): boolean</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.009s</td>
+        <td>Passed in 0.006s</td>
         <td>should return false when passing incorrectly formated username parameters</td>
         <td>utilsService &raquo; verifyLoginCredentials(user: string, host: string, port: number): boolean</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.007s</td>
+        <td>Passed in 0.006s</td>
         <td>should return false when passing incorrectly formated host parameters</td>
         <td>utilsService &raquo; verifyLoginCredentials(user: string, host: string, port: number): boolean</td>
       </tr>
       <tr class="pass">
-        <td>Passed in 0.008s</td>
+        <td>Passed in 0.011s</td>
         <td>should return a capitalized string</td>
         <td>utilsService &raquo; capitalize(str: string): void</td>
       </tr>
